# USB-Util

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Agent.md  NOTICE.md  OSS_LICENSES.md  README.md  USB_Bluetooth_Device_Info.md  com_analyze.py  com_usb_topology_wmi.py  get_com_ports_unix.py  get_com_ports_win.py  main.py  pyproject.toml  usb.ids  usb_devices.json  usb_util_gui.py
.github/workflows/: lint-workflows.yml  notice.yml  oss_licenses.yml
.venv_USB-Util/: pyvenv.cfg
core/: README.md  __init__.py  bootstrap.py  com_ports.py  device_models.py  models.py  repository.py  scanner.py  scanners.py  service.py  topology_wmi.py  usb_ids.py
scripts/: gen_notice.py
tools/diagnostics/: com_analyze.py  com_usb_topology_wmi.py
ui/: __init__.py  app.py  view_model.py
