[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "usb-util"
version = "0.1.1"
description = "USB utility helpers"
requires-python = ">=3.8"
dependencies = [
	"customtkinter>=5.2.0",
	"Pillow>=10.0.0",
	"aist_guiparts @ file:../../lab_automation_libs/autokobopy/autokobopy/ak_GUIparts",
	"pyusb>=1.2.1",
	"pyserial>=3.5",
	"ak_communication @ file:../../lab_automation_libs/autokobopy/autokobopy/ak_communication",
	"bleak>=0.21.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "ui"]

[tool.setuptools]
py-modules = ["usb_util_gui"]

[tool.metadata]
author = "Takaya Inoue"
copyright = "AUTO kobo"
