[build-system]
requires = [
	"setuptools>=61",
	"packaging>=23"
]
build-backend = "setuptools.build_meta"


[project]
name = "usb-util"
version = "0.1.1"
license = { text = "MIT" }
description = "USB utility helpers"
requires-python = ">=3.8"
dependencies = [
	"customtkinter>=5.2.0",
	"Pillow>=10.0.0",
	"aist_guiparts>=0.1.0",
	"pyusb>=1.2.1",
	"pyserial>=3.5",
	"ak_communication>=0.1.0",
	"bleak>=0.21.0"
]

[project.scripts]
usb-util-gui = "usb_util_gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "ui"]

[tool.setuptools]
py-modules = ["usb_util_gui"]

[tool.metadata]
author = "Takaya Inoue"
copyright = "AUTO kobo"
